/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package ru.dmerkushov.vnc.client.rfb.session;

/**
 *
 * @author dmerkushov
 */
public enum RfbVersion {
	RFB_VER_3_3, RFB_VER_3_7, RFB_VER_3_8

}
